--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ BEEPMART2/Temp/FSTimeGet-0a08c4f08e01fff4f8d2bf01ee305010
 BEEPMART2/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 BEEPMART2/Library/SourceAssetDB
 BEEPMART2/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+BEEPMART2/UserSettings/Layouts/default-2021.dwlt
