--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,11 @@ BEEPMART2/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 BEEPMART2/Library/SourceAssetDB
 BEEPMART2/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 BEEPMART2/UserSettings/Layouts/default-2021.dwlt
+BEEPMART2/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+BEEPMART2/Library/Bee/fullprofile.json
+BEEPMART2/Library/EditorInstance.json
+BEEPMART2/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+BEEPMART2/Library/Bee/tundra.digestcache
+BEEPMART2/Library/Bee/fullprofile.json
+BEEPMART2/Library/Bee/backend_profiler0.traceevents
+BEEPMART2/Library/Bee/fullprofile.json
